--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -140,3 +140,25 @@ html,body {
     padding: 0 15px;
     margin: 0 auto;
 }
+
+.css-btn-login {
+    box-shadow: 0 10px 30px 3px rgba(99, 119, 238, 0);
+    background: #1b394a;
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    font-size: 17px;
+    line-height: 30px;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+    color: #fff !important;
+    padding: 5px 20px;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 30px;
+    z-index: 1;
+    transition: all 500ms ease;
+    padding-right: 20px!important;
+    padding-left: 20px!important;
+    margin-left: 20px;
+}
